syntax = "proto3";

package user_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/kirillmc/trainings-auth/pkg/user_v1;user_v1";

option(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info:{
    title:"Create User API",
    version:"1.0.0",
    contact:{
      name:"Telegram",
      email:"https://t.me/McK03"
    };
  };

  host:"localhost:8081",
  schemes:HTTP,
  schemes:HTTPS,
  consumes:"application/json",
  produces:"application/json",
};

// User API
//Create|Get|Update|Delete
service UserV1{
  rpc Create(CreateRequest) returns (CreateResponse){
    option(google.api.http) = {
      post: "/user"
      body:"*"
    };
  }

  rpc Get(GetRequest) returns (GetResponse){
    option(google.api.http) = {
      get:"/user/{id}"
    };
  }

  rpc Update(UpdateRequest) returns (google.protobuf.Empty){
    option(google.api.http) = {
      patch:"/user"
      body:"*"
    };
  }

  rpc UpdatePassword(UpdatePasswordRequest) returns (google.protobuf.Empty){
    option(google.api.http) = {
      patch:"/update-password"
      body:"*"
    };
  }
  rpc UpdateRole(UpdateRoleRequest) returns (google.protobuf.Empty){
    option(google.api.http) = {
      patch:"/update-role"
      body:"*"
    };
  }

  rpc LockUser(LockUserRequest) returns (google.protobuf.Empty){
    option(google.api.http) = {
      patch:"/lock-user"
      body:"*"
    };
  }

  rpc UnlockUser(UnlockUserRequest) returns (google.protobuf.Empty){
    option(google.api.http) = {
      patch:"/unlock-user"
      body:"*"
    };
  }

  rpc Delete(DeleteRequest) returns (google.protobuf.Empty){
    option(google.api.http) = {
      delete:"/user"
    };
  }

  rpc UpdateAnthropometry(SetAnthropometryRequest) returns (google.protobuf.Empty){
    option(google.api.http) = {
      patch: "/users_anthto"
      body:"*"
    };
  }
}

enum Role{
  UNKNOWN = 0;
  USER = 1;
  MODER = 2;
  ADMIN = 3;
}

message UserInfo{
  string login = 1[(validate.rules).string = {min_len:1,max_len:50}];
  string email = 2[(validate.rules).string = {email:true, max_len:50}];
  string password = 3[(validate.rules).string = {pattern:"^[A-Za-z0-9]*$",min_len:8, max_len:50}];
  string password_confirm = 4[(validate.rules).string = {pattern:"^[A-Za-z0-9]*$",min_len:8, max_len:50}];
  Role role = 5[(validate.rules).enum.defined_only = true];
  string name = 6;
  string surname = 7;
  string avatar = 8;
}

message UpdateUserInfo{
  google.protobuf.StringValue login = 1[(validate.rules).string = {min_len:1,max_len:50}];
  google.protobuf.StringValue email = 2[(validate.rules).string = {email:true, max_len:50}];
  google.protobuf.StringValue name = 3;
  google.protobuf.StringValue surname = 4;
  google.protobuf.StringValue avatar = 5;
}

message UpdatePasswordInfo{
  google.protobuf.StringValue password = 1[(validate.rules).string = {pattern:"^[A-Za-z0-9]*$",min_len:8, max_len:50}];
  google.protobuf.StringValue password_confirm = 2[(validate.rules).string = {pattern:"^[A-Za-z0-9]*$",min_len:8, max_len:50}];
}

message User{
  string login = 1[(validate.rules).string = {min_len:1,max_len:50}];
  string email = 2[(validate.rules).string = {email:true, max_len:50}];
  Role role = 3[(validate.rules).enum.defined_only = true];
  string name = 4;
  string surname = 5;
  string avatar = 6;
  bool isLocked = 7;
  double weight = 8;
  double height = 9;
}

message CreateRequest{
  UserInfo user = 1;
}

message CreateResponse{
  int64 id = 1;
}

message GetRequest{
  int64 id = 1;
}

message GetResponse{
  int64 id = 1;
  User user = 2;
}

message UpdateRequest{
  int64 id = 1;
  UpdateUserInfo info = 2;
}

message UpdatePasswordRequest{
  int64  user_id = 1;
  UpdatePasswordInfo info = 2;
}

message UpdateRoleRequest{
  int64 user_id = 1;
  Role role = 2[(validate.rules).enum.defined_only = true];
}

message LockUserRequest{
  int64 user_to_lock_id = 1;
}

message UnlockUserRequest{
  int64 user_to_unlock_id = 1;
}

message DeleteRequest{
  int64 id = 1;
}

message SetAnthropometryRequest{
  int64 user_id=1;
  google.protobuf.DoubleValue weight =2;
  google.protobuf.DoubleValue height = 3;
}